update general form styles fix purchase form horizontal overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -331,48 +331,69 @@ form {
     
     .input-group {
         display: grid;
-        margin-bottom: 1rem;
-    }
-
-    .fieldset {
-        border: none;
+        gap: 0.25rem;
         margin-bottom: 0.5rem;
     }
 
-    .legend {
-        width: 100%;
+    .input-group > label {
+        font-weight: 600;
+        color: var(--color-gray-800);
     }
 
-    .fieldset-group {
-        border: 1px solid rgba(124, 124, 124, 1);
-        border-radius: 0.25rem;
-        padding: 0.25rem;
+    .input-group > .error {
+        height: 14px;
+        font-size: 14px;
+        line-height: 1;
+        color: red;
+        text-align: right;
+        margin-top: 0;
     }
 
-    input {
+    .input-group > input {
         border: 1px solid rgba(124, 124, 124, 1);
         border-radius: 0.25rem;
-        padding:0.25rem;
+        padding:0.5rem;
     }
 
     input[readonly] {
         background-color: rgb(239,239,239);
+        cursor: not-allowed;
     }
 
-    .button_group {
-        display: flex;
-        gap: 1rem;
+    fieldset {
+        border: none;
+        display: grid;
+    }
+
+    fieldset > legend {
+        display: block;
+        font-weight: 600;
+        margin-bottom: 0.25rem;
+    }
+
+    fieldset > .radio-group {
+        margin-bottom: 0.25rem;
+    }
+    
+    fieldset > .error {
+        height: 14px;
+        font-size: 14px;
+        line-height: 1;
+        color: red;
+        text-align: right;
     }
 
     .radio-group {
         border: none;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 1rem;
-    }
+        grid-template-columns: 
+        repeat(auto-fill, minmax(125px, 1fr))
+        ;
+        gap: 0.5rem;
 
-    .radio {
-        position: relative;
+        label {
+            position: relative;
+        }
     }
 
     input[type="radio"] {
@@ -384,7 +405,7 @@ form {
         cursor: pointer;
         border: 1px solid black;
         border-radius: 0.25rem;
-        padding: 1rem;
+        padding: 0.5rem;
         display: block;
         width: 100%;
         height: 100%;
@@ -412,19 +433,6 @@ form {
         border-color: rgb(1, 32, 8);
     }
 
-    .error {
-        height: 14px;
-        font-size: 14px;
-        line-height: 1;
-        color: red;
-        text-align: right;
-        margin-top: 0.25rem;
-    }
-
-    fieldset + .error {
-        margin-bottom: 1rem;
-    }
-
     button {
         cursor: pointer;
         background-color: hsl(121 96 39);
@@ -432,6 +440,7 @@ form {
         padding-block: 0.5rem;
         border-radius: 0.25rem;
         width: content;
+        margin-top: 1.5rem;
     }
 
     button:hover {
